--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
+    "http-errors": "^1.7.2",
     "mongoose": "^5.9.13",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
